kcm: rename 'night color' -> 'night light'
It was renamed in the user facing strings and the KWin backend, so let's adapt the code-internal usages here too to make it less messy.

--- a/appiumtests/kcms/CMakeLists.txt
+++ b/appiumtests/kcms/CMakeLists.txt
@@ -58,10 +58,10 @@ add_test(
 set_tests_properties(kcm_lookandfeel_test PROPERTIES TIMEOUT 120)
 
 add_test(
-    NAME kcm_nightcolor_test
-    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_nightcolor_test.py
+    NAME kcm_nightlight_test
+    COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/kcm_nightlight_test.py
 )
-set_tests_properties(kcm_nightcolor_test PROPERTIES TIMEOUT 120)
+set_tests_properties(kcm_nightlight_test PROPERTIES TIMEOUT 120)
 
 add_test(
     NAME kcm_notifications_test
