--- a/kcms/CMakeLists.txt
+++ b/kcms/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 add_subdirectory(autostart)
 add_subdirectory(region_language)
 add_subdirectory(notifications)
-add_subdirectory(nightcolor)
+add_subdirectory(nightlight)
 add_subdirectory(users)
 add_subdirectory(soundtheme)
 add_subdirectory(wallpaper)
