components: add DBusServiceWatcher
This is part of the effort to remove the executable dataengine. This was
originally planned to be used in the task manager to provide information
about the availability of the window view effect, but custom widgets can also
benefit from the component.

See: https://bugreports.qt.io/browse/QTBUG-90785

--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -3,6 +3,7 @@ add_definitions(-DTRANSLATION_DOMAIN=\"plasmashellprivateplugin\")
 install(DIRECTORY workspace/ DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/workspace/components)
 install(DIRECTORY dialogs/ DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/workspace/dialogs)
 add_subdirectory(containmentlayoutmanager)
+add_subdirectory(dbus)
 add_subdirectory(shellprivate)
 add_subdirectory(keyboardlayout)
 add_subdirectory(sessionsprivate)
