applets/keyboardindicator: fix key state not being reset when setting a new non-modifier key
Also add a test to guard it.

--- a/applets/keyboardindicator/plugin/autotests/CMakeLists.txt
+++ b/applets/keyboardindicator/plugin/autotests/CMakeLists.txt
@@ -1,6 +1,8 @@
 # SPDX-FileCopyrightText: 2024 Fushan Wen <qydwhotmail@gmail.com>
 # SPDX-License-Identifier: BSD-3-Clause
 
+ecm_add_test(keystatetest.cpp LINK_LIBRARIES Qt::Test Qt::Qml Qt::Quick)
+
 if(NOT CMAKE_SYSTEM_NAME MATCHES "Linux")
     return()
 endif()
