[kcms/desktoptheme] Fix removing themes
The current code uses the plasmapkg2 program, which was dropped from libplasma (but may be available from KF5 plasma-framework

Instead use KPackage API, which is nicer than messing with processes anyway

(cherry picked from commit 394ca80bdf99c5a87ab524936a132751034afb92)

--- a/kcms/desktoptheme/CMakeLists.txt
+++ b/kcms/desktoptheme/CMakeLists.txt
@@ -27,6 +27,7 @@ target_link_libraries(kcm_desktoptheme PRIVATE
   KF6::I18n
   KF6::Svg
   KF6::KCMUtilsQuick
+  KF6::Package
 )
 
 add_executable(plasma-apply-desktoptheme ${plasma-apply-desktoptheme_SRCS})
