--- a/libcolorcorrect/kded/CMakeLists.txt
+++ b/libcolorcorrect/kded/CMakeLists.txt
@@ -6,3 +6,11 @@ target_link_libraries(colorcorrectlocationupdater
                         KF6::DBusAddons
                         KF6::CoreAddons
                         colorcorrect)
+
+ecm_qt_declare_logging_category(colorcorrectlocationupdater
+                        HEADER locationupdater_debug.h
+                        IDENTIFIER LOCATIONUPDATER
+                        CATEGORY_NAME org.kde.colorcorrectlocationupdater
+                        DESCRIPTION "kded module providing location updates for Night Light"
+                        EXPORT PLASMAWORKSPACE
+    )
