applets/brightness: fix night light inhibition state not synced across instances of the applet
Integrate inhibition properties into the monitor class so it becomes a night light control class, which also simplifies the back-of-the-frontend code.

Then use a static self member for the night light inhibitor from the control class, so that the inhibition state data (state, pending inhibits and cookie) can be shared among the applet instances.

Monitor the inhibited property to also pick up inhibitions created from outside the applet.

BUG: 438291

--- a/applets/brightness/plugin/CMakeLists.txt
+++ b/applets/brightness/plugin/CMakeLists.txt
@@ -5,7 +5,7 @@
 ecm_add_qml_module(brightnesscontrolplugin URI org.kde.plasma.private.brightnesscontrolplugin GENERATE_PLUGIN_SOURCE)
 target_sources(brightnesscontrolplugin PRIVATE
     nightlightinhibitor.cpp
-    nightlightmonitor.cpp
+    nightlightcontrol.cpp
     screenbrightnesscontrol.cpp
     keyboardbrightnesscontrol.cpp
     keyboardcolorcontrol.cpp
