applets/brightness: add backend for color blindness correction
BUG: 484196

--- a/applets/brightness/plugin/CMakeLists.txt
+++ b/applets/brightness/plugin/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(brightnesscontrolplugin PRIVATE
     screenbrightnesscontrol.cpp
     keyboardbrightnesscontrol.cpp
     keyboardcolorcontrol.cpp
+    colorblindnesscorrectioncontrol.cpp
 )
 target_link_libraries(brightnesscontrolplugin PRIVATE
     Qt::Core
