--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -1,6 +1,9 @@
 # SPDX-FileCopyrightText: None
 # SPDX-License-Identifier: CC0-1.0
 
+Environment:
+  RECORD_VIDEO_NAME: output-video.webm
+
 Dependencies:
 - 'on': ['@all']
   'require':
